--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -544,6 +544,13 @@
  news.3149.d:0 "Under the lend lease act, the US congress approved to send $1 billion in free credit to the Soviet Union on October 30th 1941. Now that large parts of the Soviet Union's industrialised areas have been captured the economy will surely need this injection to save it from imminent collapse!"
  news.3149.a:0 "Ok"
  
+ usa.114.t:0 "The Lend-Lease Act"
+ usa.114.d:0 "The president of [USA.GetNameDef] anounces: With the world now fully engulfed in conflict, our neutrality may eventually be threatened by forces seeking to undermine democratic values, but with our isolationist sentiment and resentments toward our previous involvement in global affairs, we cannot afford to dive into an outside conflict with which we should never have associations.\n\nAs a result, we must take a more proactive role in supporting countries defending their sovereignty and materially assisting them in their fight against the forces of tyranny that seek to disrupt the world's peace."
+ usa.114.a:0 "May God aid those who are righteous."
+ usa.114.b:0 "Okay."
+ 
+ usa.115.t:0 "Arsenal of Democracy"
+ usa.115.d:0 "The president of [USA.GetNameDef] anounces: The Army and Navy are being expanded and re-equipped, and we are gradually becoming a "Arsenal of Democracy" for Britain and the other democratic Allies. The term "Arsenal of Democracy" refers to the collective efforts of American industry in supporting the Allies, which are concentrated in our country's established industrial centers.\n\nRoosevelt delivered a speech calling to arms for supporting the Allies in Europe and, to a lesser extent, the Republic of China in their total war against Nazi Germany and Imperial Japan. The speech was a resounding success, possibly signalling the end of the isolationist and non-interventionist doctrine that has dominated our foreign policy since our entry into the Great War."
 
  
  operation.51.t:0 "Germany captures the red army off guard"
