--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -705,7 +705,7 @@
  GER_west_wall_Hv_forts:0 "Add §Y12 Land Forts§! on the French border.\n"
  GER_fort_preusen:0 "Festung Preussen"
  GER_fort_preusen_desc:0 "Our eastern frontiers had several key fortifications constructed in the 1700s that can form as the foundation for a strong defensive line."
- GER_expand_austrian_oil:0 "Expand the Austrian Oil"
+ GER_expand_austrian_oil:0 "Expand Austrian Oil Fields"
  GER_expand_austrian_oil_desc:0 "The addition of Ostmark (Austria) to the Reich affords us a new opportunity to fuel our nation."
  GER_industrial_effort_36:0 "1936 Industrial Effort"
  GER_industrial_effort_36_desc:0 "The Germans are a work-loving people, we can channel all our political efforts on revitalizing the civilian economy with their help."
@@ -2004,11 +2004,11 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_defense_of_moscow_desc:0 "The Fascists are knocking at the gates of the capital! Moscow must not be allowed to fall at any cost. Mobilize everyone, from children to old people to hastily erect what defenses we can!"
  SOV_defense_of_moscow_forts:0 "Add §Y28 Land Forts§! in and around Moscow.\n"
  delfim_tt:0 "Creates a Submarine III design 'Delfim 37'"
- level_up_heavy_aicraft_factory_tt:0 "§GIncrease§! §YHeavy Aircraft Factory§! technology level:"
- level_up_tank_factory_tt:0 "§GIncrease§! §YTank Factory§! technology level:"
- level_up_vehicle_industry_tt:0 "§GIncrease§! §YVehicle Factory§! technology level:"
- level_up_artillery_industry_tt:0 "§GIncrease§! §YArtillery Factory§! technology level:"
- level_up_smallarms_industry_tt:0 "§GIncrease§! §YSmall Arms Factory§! technology level:"
+ level_up_heavy_aicraft_factory_tt:0 "§YHeavy Aircraft Factory§! technology level: §G+1§!"
+ level_up_tank_factory_tt:0 "§YTank Factory§! technology level: §G+1§!"
+ level_up_vehicle_industry_tt:0 "§YVehicle Factory§! technology level: §G+1§!"
+ level_up_artillery_industry_tt:0 "§YArtillery Factory§! technology level: §G+1§!"
+ level_up_smallarms_industry_tt:0 "§YSmall Arms Factory§! technology level: §G+1§!"
  SOV_government_loans:0 "Issue Compulsory Government Loans"
  SOV_government_loans_desc:0 "Borrowing money from our citizens will provide direly needed cash reserves to invest in foreign business ventures."
  SOV_lessons_winter:0 "Form Headquarters of Supreme High Command"
@@ -2515,12 +2515,13 @@ USA_unholy_alliance_desc:0 "Sometimes, we have to choose our enemies. Often, the
 USA_unholy_alliance_tt:0 "Boosts opinion and trade opinion with the Soviet Union or Germany if they are at war, siding with the defender."
 USA_limited_intervention:0 "Limited Intervention"
 USA_limited_intervention_desc:0 "It would take extraordinary aggression to draw us into a war at full force, but after the recent developments many people are freely willing to assist in conflicts abroad."
+USA_limited_intervention_tt:1 "§CStability penalty halved if world tension is over 20%§!"
 USA_build_the_pentagon:1 "Build the Pentagon"
 USA_build_the_pentagon_desc:1 "The expansion of our military requires a new global headquarters to command it."
 USA_main_battle_tanks:1 "Main Battle Tanks"
 USA_main_battle_tanks_desc:1 "Experience in the field has clearly shown that a tank must be able to perform a large number of tasks, from infantry support to fighting enemy tanks. Designing vehicles to meet these needs allows us to streamline production."
 USA_the_giant_wakes:0 "The Giant Wakes"
-USA_the_giant_wakes_desc:0 "Nations turn to us to protect the values of democracy and liberty. The world where non-interventionist America was born no longer exists and we must adapt accordingly."
+USA_the_giant_wakes_desc:0 "Nations turn to us to protect the values of democracy and liberty. The world where non-interventionist America was born no longer exists and we must adapt accordingly. \n\nAll measures must be taken to protect ourselves and our allies. No matter how long it takes to overcome this premeditated invasion, the American people will triumph in their righteous might. We will not only defend ourselves to the fullest extent possible, but we will also ensure that this type of treachery never happens again.\n\nThere are hostilities. There can be no doubt that our people, territory, and interests are in grave danger. With faith in our armed forces and the unwavering determination of our people, we will achieve the unavoidable victory – so help us God."
 USA_pearl_harbor_gambit:0 "Pearl Harbor Gambit"
 USA_pearl_harbor_gambit_desc:0 "The naval base in Pearl Harbor is an easy target for the Japanese. By basing a fleet there, we will demonstrate our power in the Pacific. Will they dare challenge such a bold move?"
 USA_pearl_harbor_gambit_tt:0 "§YWhile the focus is running, Japan will have the opportunity to launch an attack.§! Should they wait, we will have better prepared defenses! We will gain: 4 naval base levels, 2 air base levels, 1 anti-air level, 2 bunkers and 2 coastal forts. After the gambit is complete they will also have §Greduced§! effect of their attack."
@@ -2583,7 +2584,7 @@ USA_amphibious_operations_2_desc:0 "Our forces on enemy beaches will be highly v
 USA_expand_the_USMC:0 "Expand The Marine Corps"
 USA_expand_the_USMC_desc:0 "The United States Marine Corps has been a decisive force in many past wars and may be more relevant than ever for our amphibious campaigns. Semper fidelis!"
 USA_lend_lease_act_0:0 "Lend Lease Act"
-USA_lend_lease_act_0_desc:0 "The large democracies of the world are under assault. If they lose the battle, it is only a question of time before war comes to our shores. We must do what we can to support them - even if they can not pay for the equipment immediately."
+USA_lend_lease_act_0_desc:0 "The large democracies of the world are under assault. If they lose the battle, it is only a question of time before war comes to our shores. We must do what we can to support them - even if they can not pay for the equipment immediately. This effectively ends the United States' pretence of neutrality, which was enshrined in the 1930s Neutrality Acts and represents a decisive shift away from non-interventionism and toward open support for the Allies."
 USA_lend_lease_act:0 "Extend Lend Lease Act"
 USA_lend_lease_act_desc:0 "The Lend-Lease Act authorized the president to transfer arms or any other defense materials for which Congress appropriated money to “the government of any country whose defense the President deems vital to the defense of the United States.” By allowing the transfer of supplies without compensation, the act permitted the United States to support its war interests without being overextended in battle. The Soviet Union will be added to the bill by this focus. This was highly controversial as the bill will in theory allow the Soviet Union to borrow the USS Texas for free."
 USA_lend_lease_act_planes:0 "Lend lease planes"
@@ -3455,7 +3456,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  USA_war_production_board:0 "War Production Board"
  USA_war_production_board_desc:0 "Now that we are at war we should increase the power of the office of production management in the way that we reorganize it and create the war production board!"
  USA_office_of_scientific_research_and_development:0 "Office of Scientific Research and Development"
- USA_office_of_scientific_research_and_development_desc:0 "The office of scientific research and development was an agency of the United States federal government created to coordinate scientific research for military purposes during World War II."
+ USA_office_of_scientific_research_and_development_desc:0 "The President issued Executive Order 8807, formally establishing the Office of Scientific Research and Development, a federal agency of the United States created to coordinate scientific research for military purposes during the war. \n\nProjects will focus on new and more accurate bombs, reliable detonators, proximity fuze research, guided missiles, radar and early-warning systems, lighter and more accurate hand weapons, more effective medical treatments, and more versatile vehicles."
  USA_ask_east_indies_to_embargo_japan:0 "Enforce Japanese Embargo"
  USA_ask_east_indies_to_embargo_japan_desc:0 "Lets make sure these countries fully understand our position in this delicate matter."
  USA_ask_uk_and_allies_to_embargo_japan:0 "US-British Foreign Policy"
