--- a/bicemodded/localisation/english/game_rules_l_english.yml
+++ b/bicemodded/localisation/english/game_rules_l_english.yml
@@ -461,6 +461,18 @@
  RULE_OPTION_TUR_FASCISM_ALTERNATE_DESC: "Fevzi Çakmak shall transition Turkey into a conservative quasi-fascist dictatorship and attempt to form a faction with Italy."
  RULE_OPTION_BALKAN_ENTENTE: "Safeguard the Balkans"
  RULE_OPTION_BALKAN_ENTENTE_DESC: "Turkey will commit itself to maintaining security in the Balkans and attempt to form a faction with Greece, Romania, and Yugoslavia."
+ 
+ RULE_GROUP_GENERAL_UI:0 "UI"
+ OBSOLETE_FOCUS_BRANCHES_VISIBILITY:0 "Show obsolete branches in Focus Tree"
+ RULE_OPTION_HIDE:0 "Hide"
+ RULE_OPTION_HIDE_DESC:0 "Certain obsolete branches will be hidden under the appropriate circumstances for easier navigation of the Focus Tree."
+ RULE_OPTION_SHOW:0 "Show"
+ RULE_OPTION_SHOW_DESC_DESC:0 "Obsolete branches will always remain visible in the Focus Tree."
+ 
+ LON_NON_INTERFERENCE_RESOLUTION_CALL:0 "[FROM.GetNameDefCap] cannot be called due to a League of Nations' Non-Interference resolution"
+ LON_NON_INTERFERENCE_RESOLUTION_JOIN:0 "You cannot join [FROM.GetNameDef] due to a League of Nations' Non-Interference resolution"
+ RULE_VOLUNTEERS_ETHIOPIA_ONLY_ONE_TT:0 "You can only send volunteer units to [ETH.GetName] currently"
+ 
  RULE_GROUP_PEACE_SCORE:0 "Peace Score distribution"
  PEACE_SCORE_TO_OVERLORD:0 "Puppets to Overlord"
  RULE_OPTION_PEACE_SCORE_TO_OVERLORD_YES_DESC:0 "Puppets give a part of their Peace Score to their Overlord. The ratio depends on their Autonomy level."
