--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -129,6 +129,10 @@
  HUN_synthetic_research_desc:0 "Developing Synthetic oil will put us less at risk of losing our Oil supply and will make us self autonomous"
  
  
+ USA_f86sabre:0 "F-86 Sabre"
+ USA_f86sabre_desc:0 "We need a swept-wing jet fighter to rule the skies if we are to keep up with other major powers going into the 1950s."
+ USA_peacemaker:0 "Peacemaker"
+ USA_peacemaker_desc:0 "We need a heavy high altitude bomber capable of intercontinental bombing runs. This airplane will be able to carry over 30 tons of bombs from the safety of our shores to Germany, resistance will be futile!"
  USA_3LA:0 "Establish the 3 Letter Agencies"
  USA_3LA_desc:0 "The 3 Letter Agencies will be part of the Presidents new plan to address the Depression.  These will cover all parts of life, and hopefully address the problems American people are facing with the Great Depression."
  USA_public_works:0 "Public Works Administration"
@@ -148,7 +152,7 @@
  USA_tax_break:0 "Cut the Taxes"
  USA_tax_break_desc:0 "Cutting the taxes will bring us immediate gains but might cost us in the long run, we need to take that into account."
  USA_expand_rfc:0 "Expand the RFC"
- USA_expand_rfc_desc:0 "Since another war is approaching us, we need to invest into the RFC, their industrial capability will be especially useful in munition production!"
+ USA_expand_rfc_desc:0 "In 1932 Eugene Meyer, a member of the Federal Reserve Board of Governors suggested the formation of an organization modelled on the lines of US War Finance Corporation of the Great War, the suggestion was accepted and recommended by the then President Herbert Hoover. Among the sweeping reforms, President Roosevelt is carrying out as part of ”The New Deal”, the RFC is to be expanded and geared towards possible war material production."
  
  
  
@@ -2417,7 +2421,7 @@ USA_naval_expansion_act:0 "Naval Blueprints Development"
 USA_naval_expansion_act_desc:0 "We need better designs to compete with the Japanese battleship developments, otherwise our Pacific navy will be way behind!"
 war_navy_tt:0 "When we join the §YWar§! we will get §G14§! Dockyards and the §YTwo Ocean Navy Act§! National Spirit will §Gupgrade§!!"
 US_essex_tt:0 "Adds Two §YEssex Class§! 1940 Carrier to the production queue, at §G30%§! and §G20%§! respectively.\nGet improved design by following techs: §CDual-Purpose Secondary Battery§!"
-US_montana_tt:0 "Adds Two §YMontana Class§! 1941 Battleships to the production queue, at §G40%§! and §G30%§! respectively.\nGet improved design by following techs: §CTurreted Secondary Battery§!, §CAdvanced Heavy Battery§!"
+US_montana_tt:0 "Adds Two §YMontana Class§! 1941 Battleships to the production queue, at §G40%§! and §G30%§! respectively.\nGet improved design by following tech: §CAdvanced Heavy Battery§!"
 US_lessons_tt:0 "Adds a §YLessons of War§! National Spirit, depending if you have completed the §YBattleship Primacy§! or §YCarrier Primacy§!"
 USA_wilson_act:0 "Second Vinson Act"
 USA_wilson_act:0 "With the increasing threat of another war, expanding our naval forces will be crucial to defending the Home of the Free. After passing this act, we predict a 20% expansion of its size."
@@ -2692,7 +2696,7 @@ USA_bonneville_project_act_desc:0 "The Bonneville Project Administration was mod
 USA_civil_aeronautics_act:0 "Civil Aeronautics Act"
 USA_civil_aeronautics_act_desc:0 "The Civil Aeronautics Act was passed to foster air commerce, improve safety, and to certify both pilots and aircraft."
 USA_reorganization_act:0 "Reorganization Act"
-USA_reorganization_act_desc:0 "The first major reorganization since 1787, this allowed the President to create the Executive Office of the President to personally oversee dozens of 3 Letter Agencies, including the WPA, NYA, and the PWA among many others.  4 more years!"
+USA_reorganization_act_desc:0 "The first major reorganization since 1787, this allowed the President to create the Executive Office of the President to personally oversee dozens of 3 Letter Agencies, including the WPA, NYA, and the PWA among many others. 4 more years!"
 USA_court_packing:0 "Court Packing"
 USA_court_packing_desc:0 "The Supreme Court is hindering many of the New Deal reforms from passing. While unpopular in Congress, it might be necessary to push through the Judicial Procedures Reform Bill to strategically remove the opposition and pave way for judges friendlier to the President's ideas."
 USA_huac:0 "House Committee on Un-American Activities"
@@ -7395,7 +7399,7 @@ NOR_heavycruiser_project:0 "Capital Ship Program"
 NOR_heavycruiser_project_desc:0 "Now that we have modernized our navy we can begin to build truly magnificent ships."
 NOR_cruiser_ship_tt:0 "Adds a Olav Tryggvason-Class §Y1934 Light Cruiser§! to the production queue, at §G40% completion§!."
 NOR_cruiser_ship_2_tt:0 "Adds a Hakkon-Class §Y1936 Heavy Cruiser§! to the production queue, at §G40% completion§!."
-NOR_cruiser_ship_2_upg_tt:0 "Get §GImproved design§! by the following techs: §CBasic Medium Battery§! and §CPowered Secondary Battery§!"
+NOR_cruiser_ship_2_upg_tt:0 "Get §GImproved design§! by the following tech: §CBasic Medium Battery§!"
 NOR_bondepartei_tt:0 "§CPossible Bondeparti victory in 1936 election§!"
 NOR_bondepartei:0 "Bondepartiet"
 NOR_bondepartei_desc:0 "Bondepartiet is an agrarian party of Norway, with them leading our nation, we'll be able to get out of the Great Depression"
