--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -2093,10 +2093,13 @@
  advanced_secondary_battery_desc:1 "By placing the secondary guns in powered turrets, they gain a much wider field of fire at the expense of heavier weight and reduced stability in heavy seas.\n\nMounting a §YSecondary Battery§! Module gives a §YCruiser§!, §YCarrier§!, or §YHeavy Ship§! a small amount of §YLight Gun Attack§! and allows it to engage a second target."
  modern_secondary_battery:0 "Autoloading Secondary Battery"
  modern_secondary_battery_desc:1 "By outfitting the batteries with autoloader, they gain a much rate of fire at the expense of heavier weight and reduced stability in heavy seas.\n\nMounting a §YSecondary Battery§! Module gives a §YCruiser§!, §YCarrier§!, or §YHeavy Ship§! a small amount of §YLight Gun Attack§! and allows it to engage a second target."
- dp_secondary_battery:0 "Dual-Purpose Secondary Battery"
+ dp_secondary_battery:0 "Basic Dual-Purpose Secondary Battery"
  dp_secondary_battery_desc:1 "Combining anti-ship and anti-air guns in a single mount allows for more flexibility and saves weight.\n\nMounting a §YSecondary Battery§! Module gives a §YCruiser§!, §YCarrier§!, or §YHeavy Ship§! a small amount of §YLight Gun Attack§! and allows it to engage a second target. This module also increases §YAnti-Air Attack§!."
- dp_secondary_battery_2:0 "Modern D-P Secondary Battery"
+ dp_secondary_battery_2:0 "Improved Dual-Purpose Secondary Battery"
  dp_secondary_battery_2_desc:1 "Combining modern anti-ship and anti-air guns in a single mount allows for more flexibility and saves weight.\n\nMounting a §YSecondary Battery§! Module gives a §YCruiser§!, §YCarrier§!, or §YHeavy Ship§! a small amount of §YLight Gun Attack§! and allows it to engage a second target. This module also increases §YAnti-Air Attack§!."
+ 
+ dp_secondary_battery_3:0 "Advanced Dual-Purpose Secondary Battery"
+ dp_secondary_battery_3_desc:1 "Combining modern anti-ship and anti-air guns in a single mount allows for more flexibility and saves weight.\n\nMounting a §YSecondary Battery§! Module gives a §YCruiser§!, §YCarrier§!, or §YHeavy Ship§! a small amount of §YLight Gun Attack§! and allows it to engage a second target. This module also increases §YAnti-Air Attack§!."
  damage_control_1:0 "Fire Fighting Drills"
  damage_control_1_desc:0 "Every member of a ship's crew, from the Captain down to the simple sailor, must be able to help in containing and fighting fires onboard the ship."
  damage_control_2:0 "Separate Fire Mains"
