--- a/bicemodded/localisation/english/ship_modules_l_english.yml
+++ b/bicemodded/localisation/english/ship_modules_l_english.yml
@@ -139,18 +139,24 @@
  ship_secondaries_2:0 "100mm RF. Cannon"
  ship_secondaries_2_short:0 "Secondary Battery II"
  ship_secondaries_2_desc:0 "A small power assisted mount for rapid-fire cannons, designed to defend capital ships against destroyers and torpedo boats."
- ship_secondaries_3:0 "120mm RF. Cannon"
+ ship_secondaries_3:0 "115mm RF. Cannon"
  ship_secondaries_3_short:0 "Secondary Battery III"
  ship_secondaries_3_desc:0 "A small armoured turreted mount for rapid-fire cannons, designed to defend capital ships against destroyers and torpedo boats."
- ship_secondaries_4:0 "130mm RF. Cannon"
- ship_secondaries_4_short:0 "Secondary Battery III"
+ ship_secondaries_4:0 "127mm RF. Cannon"
+ ship_secondaries_4_short:0 "Secondary Battery IV"
  ship_secondaries_4_desc:0 "A small armoured turreted mount for rapid-fire cannons, designed to defend capital ships against destroyers and torpedo boats."
- dp_ship_secondaries:0 "127mm Dual-Purpose Secondary Battery"
+ ship_secondaries_5:0 "152mm RF. Cannon"
+ ship_secondaries_5_short:0 "Secondary Battery V"
+ ship_secondaries_5_desc:0 "A small armoured turreted mount for rapid-fire cannons, designed to defend capital ships against destroyers and torpedo boats."
+ dp_ship_secondaries:0 "115mm Dual-Purpose Secondary Battery"
  dp_ship_secondaries_short:0 "Dual-Purpose Secondary Battery"
  dp_ship_secondaries_desc:0 "By combining the duties of the heavy anti-air gun and the secondary battery, this mount drastically boosts the anti-air capabilities of a ship while also providing some measure of defense against smaller surface targets."
- dp_ship_secondaries_2:0 "152mm Dual-Purpose Secondary Battery"
+ dp_ship_secondaries_2:0 "127mm Dual-Purpose Secondary Battery"
  dp_ship_secondaries_2_short:0 "Dual-Purpose Secondary Battery"
  dp_ship_secondaries_2_desc:0 "By combining the duties of the heavy anti-air gun and the secondary battery, this mount drastically boosts the anti-air capabilities of a ship while also providing some measure of defense against smaller surface targets."
+ dp_ship_secondaries_3:0 "152mm Dual-Purpose Secondary Battery"
+ dp_ship_secondaries_3_short:0 "Dual-Purpose Secondary Battery"
+ dp_ship_secondaries_3_desc:0 "By combining the duties of the heavy anti-air gun and the secondary battery, this mount drastically boosts the anti-air capabilities of a ship while also providing some measure of defense against smaller surface targets."
  ship_fire_control_system_0:0 "Central Rangefinding"
  ship_fire_control_system_0_short:0 "Fire Control I"
  ship_fire_control_system_0_desc:0 "A central station high up in the ship's mast determines the range to the target and transmits that information to the gun mounts."
@@ -725,9 +731,10 @@
  JAP_ship_light_medium_battery_1:0 "14cm/50 3rd Yr. Type"
  JAP_ship_light_medium_battery_2:0 "15.5cm/60 3rd Yr. Type"
  JAP_ship_light_medium_battery_3:0 "15.5cm/60 RPC"
- JAP_ship_medium_battery_1:0 "20cm/50 3rd Yr Tp No 1"
- JAP_ship_medium_battery_2:0 "20cm/50 3rd Yr Tp No 3"
- JAP_ship_medium_battery_3:0 "20cm/50 3rd Yr w/RPC"
+ JAP_ship_medium_battery_1:0 "15cm/50 3rd Yr. Type"
+ JAP_ship_medium_battery_2:0 "20cm/50 3rd Yr Tp No 1"
+ JAP_ship_medium_battery_3:0 "20cm/50 3rd Yr Tp No 3"
+ JAP_ship_medium_battery_4:0 "20cm/50 3rd Yr w/RPC"
  JAP_ship_secondaries_1:0 "12.7cm/40 Type 89"
  JAP_ship_secondaries_2:0 "15cm/50 41st Yr. Type"
  JAP_ship_secondaries_3:0 "15.5cm/60 3rd Yr. Type"
