--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -95,7 +95,8 @@
  military_theorist_2:0 "Military Theorist"
  military_theorist_3:0 "Military Theorist"
  air_warfare_theorist:0 "Air Warfare Theorist"
- air_warfare_theorist:0 "Air Warfare Theorist"
+ air_warfare_theorist_2:0 "Air Warfare Theorist"
+ air_warfare_theorist_3:0 "Air Warfare Theorist"
  dive_bomber:0 "Dive Bombing Theorist"
  carpet_bomber:0 "Carpet Bombing Theorist"
  GERdive_bomber:0 "Dive Bombing Theorist"
@@ -114,6 +115,8 @@
  GER_army_commando:1 "Commando\n(Expert)"
  assault_avaition:0 "Assault Aviation"
  naval_theorist:0 "Naval Theorist"
+ naval_theorist_2:0 "Naval Theorist"
+ naval_theorist_3:0 "Naval Theorist"
  naval_aviation_pioneer:0 "Naval Aviation Pioneer"
  grand_fleet_proponent:0 "Grand Fleet Proponent"
  submarine_specialist:0 "Submarine Specialist"
