--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2697,6 +2697,8 @@ USA_civil_aeronautics_act:0 "Civil Aeronautics Act"
 USA_civil_aeronautics_act_desc:0 "The Civil Aeronautics Act was passed to foster air commerce, improve safety, and to certify both pilots and aircraft."
 USA_reorganization_act:0 "Reorganization Act"
 USA_reorganization_act_desc:0 "The first major reorganization since 1787, this allowed the President to create the Executive Office of the President to personally oversee dozens of 3 Letter Agencies, including the WPA, NYA, and the PWA among many others. 4 more years!"
+SF_cap_increase_12_tt:0 "§YSpcecial Forces Cap§! §G+12§!"
+SF_cap_increase_24_tt:0 "§YSpcecial Forces Cap§! §G+24§!"
 USA_court_packing:0 "Court Packing"
 USA_court_packing_desc:0 "The Supreme Court is hindering many of the New Deal reforms from passing. While unpopular in Congress, it might be necessary to push through the Judicial Procedures Reform Bill to strategically remove the opposition and pave way for judges friendlier to the President's ideas."
 USA_huac:0 "House Committee on Un-American Activities"
@@ -3455,6 +3457,8 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  schacht_in_control:0 "Schacht is in control of the economy"
  goering_in_control:0 "Göring is in control of the economy"
  FRA_strengthen_government_support_tooltip:0 "'Strengthen Government Support' idea has run its course."
+ USA_monroe:0 "Reafirm Monroe Doctrine"
+ USA_monroe_desc:0 "After 1898, the Monroe Doctrine was reinterpreted by Latin American lawyers and intellectuals as promoting multilateralism and non-intervention. We need to use this to support non-interventionism abroad while keeping ourselves neutral and isolated from the hot-beds of Europe and Asia."
  USA_office_of_production_management:0 "Office of Production Management"
  USA_office_of_production_management_desc:0 "Was an organisation to centralize direction of federal procurement programs and quasi-war production!"
  USA_war_production_board:0 "War Production Board"
