--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -784,6 +784,7 @@
  ford_motor_company:0 "Ford Motor Company"
  standard_oil_california:0 "Standard Oil of California"
  general_electric:0 "General Electric"
+ bethlehem_steel:0 "Bethlehem Steel"
  marmon_herrington:0 "Marmon-Herrington"
  chrysler:0 "Chrysler"
  army_ordnance_department:0 "Army Ordnance Department"
