--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -551,6 +551,12 @@
  
  usa.115.t:0 "Arsenal of Democracy"
  usa.115.d:0 "The president of [USA.GetNameDef] anounces: The Army and Navy are being expanded and re-equipped, and we are gradually becoming a "Arsenal of Democracy" for Britain and the other democratic Allies. The term "Arsenal of Democracy" refers to the collective efforts of American industry in supporting the Allies, which are concentrated in our country's established industrial centers.\n\nRoosevelt delivered a speech calling to arms for supporting the Allies in Europe and, to a lesser extent, the Republic of China in their total war against Nazi Germany and Imperial Japan. The speech was a resounding success, possibly signalling the end of the isolationist and non-interventionist doctrine that has dominated our foreign policy since our entry into the Great War."
+ 
+ usa.116.t:0 "Quarantine Aggressors"
+ usa.116.d:0 "The president of [USA.GetNameDef] is calling for an international "quarantine" against the "epidemic of world lawlessness" by aggressive nations as an alternative to the current political climate of American neutrality and non-intervention. He suggests the use of economic pressure, a forceful response, but less direct than outright aggression. No one knows what kind of political pressure would be put in place in practice."
+ 
+ usa.117.t:0 "US Embargo in Effect"
+ usa.117.d:0 "."
 
  
  operation.51.t:0 "Germany captures the red army off guard"
@@ -4165,6 +4171,9 @@ startevent.7.d:0 "Japan's lack of material resources and existing military adven
  romania.10.t:0 "Romanian Combined Effort"
  romania.10.d:0 "Operation Edelweiss, named after the mountain flower, was a German plan to gain control over the Caucasus and capture the oil fields of Baku during the Soviet-German War. The operation was authorised by Hitler on 23 July 1942. The main forces included Army Group A commanded by Wilhelm List, 1st Panzer Army (Ewald von Kleist), 4th Panzer Army (Colonel-General Hermann Hoth), 17th Army (Colonel-General Richard Ruoff), part of the Luftflotte 4 (Generalfeldmarschall Wolfram Freiherr von Richthofen) and the 3rd Romanian Army (General Petre Dumitrescu). Army Group A was supported to the east by Army Group B commanded by Fedor von Bock and by the remaining 4th Air Fleet aircraft (1,000 aircraft in all). The land forces, accompanied by 15,000 oil industry workers, included 167,000 troopers, 4,540 guns and 1,130 tanks."
  romania.10.a:0 "We will give everything we've got."
+ romania.24.t:0 "German-Romanian Oil Exploitation Company"
+ romania.24.d:0 "Romania has sarted a project with a lucrative opportunity to expand their oil output. Romania still has untapped potential due to lack of refining, they will now send some low grade oil directly to us."
+ romania.24.t:0 "Great!"
  poland.19.t:0 "The War has begun"
  poland.19.d:0 "Germany has declared war on Poland under the justification that the polish soldiers were attacking the germans at the border in the summer. We have promised Poland help, after a refused German ultimatum, we shall join this war and save Europe from the nazi regime."
  poland.19.a:0 "Britain at War"
