--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2443,6 +2443,14 @@ USA_victory_program:0 "Victory Program"
 USA_victory_program_desc:0 "Originally we've planned for our entrance into the war in case of a Soviet defeat. However, it appears that Japan has awakened the Giant that will destroy Japan and save Europe all on its own!"
 USA_heavy_industry_2:0 "Recruitment in the Heavy Industry"
 USA_heavy_industry_2_desc:0 "The Heavy Industry is in need of workers, and in a time of huge unemployment this seems like a perfect opportunity to offer the jobs to our people!"
+USA_heavy_industry_4:0 "Federal Security Agency"
+USA_heavy_industry_4_desc:0 "We need to Rreduce the number of agencies reporting directly to the president, by clubbing several smaller organizations directly under a single management, that can better assess the resources and ensure a more judicious of resources."
+USA_executive_office_president: "The Executive Office of the President"
+USA_executive_office_president_desc: "The President of the United States needs help. He is like any other mortal man and needs the proper support structure in place if he is to govern effectively. In the past, president’s were hamstrung by this lack of support, and their administrations could never fulfil their potential. By establishing the Executive Office of the President, order will be brought to the White House, and the necessary foundation for any great government will be put in place."
+USA_support_american_artisans: "Support American Artisans"
+USA_support_american_artisans_desc: "In times of need the artist, no less than the manual worker, is entitled to employment as an artist at the public expense, the arts, no less than business, agriculture, and labor, are and should be the immediate concern of the ideal commonwealth. Federal Project Number One, also referred to as Federal One, is the collective name for a group of planned projects under the Works Progress Administration, a New Deal program in the United States."
+USA_regulate_securities: "Regulate the Securities Exchange"
+USA_regulate_securities_desc: "While the Federal Securities act has been largely successful in promoting ethical practices, it's implementation has been lackluster. To encourage retail investors again we need to make sure securities follow strict reculation while providing guarantees for investors to get back at least 30% on their investment should it fail."
 USA_nimitz_plan:0 "Nimitz Plan"
 USA_nimitz_plan_desc:0 "Nimitz and the Chief of Naval Operations in Washington have prepared a plan for the war in Asia. The plan is to enact the Island-Hopping campaign and quickly get to the main target of Japan, all while bypassing their heavily defended islands and raiding them into oblivion."
 USA_arthur_plan:0 "MacArthur Plan"
@@ -2479,6 +2487,7 @@ USA_committee_on_technocracy:0 "Committee on Technocracy"
 USA_committee_on_technocracy_desc:0 "We should replace a number of politicians and businesspeople with scientists and engineers. They have the technical expertise to manage the economy and we will see great scientific progress that will lead to our economy flourishing once again."
 USA_support_rock_island:0 "Support Rock Island Arsenal"
 USA_support_rock_island_desc:0 "Supporting our brave troops in any way we can is key to victory. Whether it's by laying down heavy artillery fire from a distance, or more direct support on the battlefield, we must make sure our troops have everything they need."
+USA_military_construction_tt:0 "§CCongress bypassed if at war§!"
 USA_military_construction:0 "Expand Our Military Factories"
 USA_military_construction_desc:0 "With superpowers threatening world peace, our public works projects need to be turned towards military matters as well as civilian ones."
 USA_USACE_projects:0 "US Army Corps of Engineers Projects"
@@ -3457,7 +3466,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  schacht_in_control:0 "Schacht is in control of the economy"
  goering_in_control:0 "Göring is in control of the economy"
  FRA_strengthen_government_support_tooltip:0 "'Strengthen Government Support' idea has run its course."
- USA_monroe:0 "Reafirm Monroe Doctrine"
+ USA_monroe:0 "Reaffirm Monroe Doctrine"
  USA_monroe_desc:0 "After 1898, the Monroe Doctrine was reinterpreted by Latin American lawyers and intellectuals as promoting multilateralism and non-intervention. We need to use this to support non-interventionism abroad while keeping ourselves neutral and isolated from the hot-beds of Europe and Asia."
  USA_office_of_production_management:0 "Office of Production Management"
  USA_office_of_production_management_desc:0 "Was an organisation to centralize direction of federal procurement programs and quasi-war production!"
