--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1353,6 +1353,7 @@
  USA_NLRA_spirit:0 "National Labor Relations Act"
  USA_AERO_idea:0 "Civil Aeronautics Administration"
  USA_PWA_spirit:0 "Public Works Administration"
+ USA_the_pentagon:0 "The Pentagon"
 
  south_china_incident:0 "§YSouth China Incident§! Happened"
  new_deal:0 "New Deal"
