--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -3705,7 +3705,7 @@
  BICE_britain.26.a:0 "Excellent, sign!"
  BICE_britain.26.b:0 "We will go alone!"
  usa.66.t:0 "The Atlantic Charter"
- usa.66.d:0 "British Prime Minister Churchill and US President Roosevelt met at an anchorage in New Foundland and signed the Atlantic Charter. The Charter expresses '-The right of all peoples to choose the form of government under which they will live.' The Charter was a pivotal policy statement issued on 14 August 1941 which defined the Allied goals for the post-war world and committed the USA to the allied war effort by agreeing to not sign a separate peace."
+ usa.66.d:0 "British Prime Minister [ENG.GetLeader] and US President [USA.GetLeader] met at an anchorage in New Foundland and signed the Atlantic Charter. The Charter expresses '-The right of all peoples to choose the form of government under which they will live.' The charter is hailed in the western press as a pivotal policy statement defining unified allied goals, most importantly, by agreeing to not sign a separate peace."
  usa.66.a:0 "okay"
  usa.66.b:0 "okay"
  usa.66.c:0 "okay"
