--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1357,6 +1357,7 @@
  USA_NLRA_spirit:0 "National Labor Relations Act"
  USA_AERO_idea:0 "Civil Aeronautics Administration"
  USA_PWA_spirit:0 "Public Works Administration"
+ USA_executive_office:0 "Executive Office"
  USA_the_pentagon:0 "The Pentagon"
 
  south_china_incident:0 "§YSouth China Incident§! Happened"
@@ -1429,6 +1430,7 @@
  ideological_fanaticism_focus:0 "Ideological Fanaticism"
  political_commissars_focus:0 "Political Commissars"
  wartime_industry_focus:0 "Wartime Industry"
+ wartime_industry_focus2:0 "Improved Wartime Industry"
  bureau_of_ships_focus:0 "Bureau of Ships"
  factories:1 "Factories"
  government:1 "Laws & Government"
@@ -5188,14 +5190,14 @@
 
  USA_destroyed_hawaii_1:0 "§OPearl Harbor Fuel Depot Damaged§!"
  USA_destroyed_hawaii_2:0 "§RPearl Harbor Fuel Depot Devastated§!"
- USA_great_depression_down_tt:0 "Reduces the effect of The Great Depression\n"
+ USA_great_depression_down_tt:0 "§GReduces the effect of The Great Depression§!\n"
  USA_torpedo_detonator_penalty: "§8Torpedo Reliability Issues§!"
  USA_torpedo_detonator_penalty_desc: "Some of our sailors are reporting reliability issues with our torpedoes. It might just be a lack of training and maintenance."
  USA_torpedo_detonator_penalty_timed: "§5Identified Torpedo Issues§!"
  USA_torpedo_detonator_penalty_timed_desc: "As it turns out, there was something to those reports. A series of quick fixes have been implemented, and a complete fix is under development."
 
- ITA_controls_malta:0 "We Control Malta"
- ENG_controls_malta:0 "Bastion in the Mediterranean"
+ ITA_controls_malta:0 "§GWe Control Malta§!"
+ ENG_controls_malta:0 "§GBastion in the Mediterranean§!"
 
  alfa_romeo:0 "Alfa Romeo"
  alfa_romeo_desc:0 "Only if you like speed"
